# base131072

./: .gitignore  Cargo.toml  README.md  download-ucd.sh
src/: lib.rs  lookup_table.rs
